--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,9 @@
-title: unity-conditional-scripting
+title: Conditional behaviour with if/else
 hero_image: images/banner.png
-description: unity-conditional-scripting description
+description: Conditional behaviour with if/else
 version: 4
 listed: false
 copyedit: false
 last_tested: "2021-11-22"
 steps:
-  - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Conditional behaviour with if/else
